--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!--right section: email-->
     <div>
       <div class="main-right">
-        <div class="email"><a href="mailto:elsie.c.madden@gmail.com?subject=subject text">eunbyuc@gmail.com</a></div>
+        <div class="email"><a href="mailto:elsie.c.madden@gmail.com?subject=subject text">elsie.c.madden@gmail.com</a></div>
         <div class="vl-right"></div>
       </div>
     </div>
@@ -195,10 +195,10 @@
                   <h3>Oct 2018 - Present</h3>
                   <br>
                   <ul>
-                    <li>Built a simple multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
+                    <li>Built a multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
                     <li>Built a simple website, <a class="emphasis_intro in-para-link" href="#">ELSIEMADE</a>, to display some of my photo-editing skills on my favorite travel moments.</li>
                     <br>
-                    <li>Developing a data repository web app, <a class="emphasis_intro in-para-link" href="#">RadQA MRI Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
+                    <li>Designed the frontend for data repository, <a class="emphasis_intro in-para-link" href="#">RadQA Solutions Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
                     <!-- <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li> -->
                   </ul>
                 </div>
@@ -208,10 +208,10 @@
                   <h3>Jun 2017 - Oct 2018</h3>
                   <br>
                   <ul>
-                    <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells application.</li><br>
                     <li><a class="emphasis_intro">[Thesis]</a>: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
-                    <li><a class="emphasis_intro">[Project]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
-                    <li><a class="emphasis_intro">[Project]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
+                    <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells application.</li><br>
+                    <li><a class="emphasis_intro">[Project-II]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
+                    <li><a class="emphasis_intro">[Project-III]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
                   </ul>
                 </div>
                 <div id="thermo" class="tabcontent">
@@ -274,31 +274,12 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Task-it</h3>
+                    <h3 class="flip-box-header">Task-IT</h3>
                     <p>A multi-platform task management tool.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="box-item">
-              <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <h3 class="flip-box-header">Burger Builder</h3>
-                    <p>An interactive web tool to create and order your burger.</p>
-                  </div>
-                </div>
-                <div class="flip-box-back text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <div class="back-para">An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
-                    </div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
@@ -309,13 +290,12 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Repository for MRI Data</h3>
-                    <p>[Blank]</p>
+                    <h3 class="flip-box-header">RadQA Solutions Data Repository</h3>
+                    <p>Designed Frontend of MRI Data Repository.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">[Description] </div><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
@@ -344,14 +324,14 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Task-it</h3>
-                    <p>A multi-platform task management tool.</p>
+                    <h3 class="flip-box-header">ELSIEMADE</h3>
+                    <p>A simple website for my photography collection of my favorite moments in life.
+                    </p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <div class="listoftools">[ HTML, CSS ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
@@ -361,15 +341,14 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Repository for MRI Data</h3>
-                    <p>[Blank]</p>
+                    <h3 class="flip-box-header">USPTO: Customizable Instrument</h3>
+                    <p>Methods and apparatus that mix reagents for immunoassays</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">[Description] </div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <div class="listoftools">[ IPN: WO2017011560A1 ]</div>
+                    <button class="flip-box-button"><a href="https://patentimages.storage.googleapis.com/6b/bf/7f/4965f711c7b8e7/WO2017011560A1.pdf">Learn More</a></button>
                   </div>
                 </div>
               </div>
@@ -378,33 +357,14 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Task-it</h3>
-                    <p>A multi-platform task management tool.</p>
+                    <h3 class="flip-box-header">Carbon nanofibers for electrochemistry.</h3>
+                    <p>Fundamental research focused on novel carbon materials for electrochemical devices.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="box-item">
-              <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <h3 class="flip-box-header">Burger Builder</h3>
-                    <p>An interactive web tool to create and order your burger.</p>
-                  </div>
-                </div>
-                <div class="flip-box-back text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <div class="back-para">An interactive web tool to create your own burger using listed ingredients and get an estimated price before ordering.
-                    </div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <div class="listoftools">[ Published on Electrochimica Acta - Sept, 2018]</div>
+                    <button class="flip-box-button"><a href="https://escholarship.org/content/qt3bd1w0dt/qt3bd1w0dt.pdf">Learn More</a></button>
                   </div>
                 </div>
               </div>
@@ -413,50 +373,14 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Repository for MRI Data</h3>
-                    <p>[Blank]</p>
+                    <h3 class="flip-box-header">Ion Sensor on Carbon nanostructures</h3>
+                    <p>Sensing Iodine on graphitic carbon nanofibers. </p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">[Description] </div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="box-item">
-              <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <h3 class="flip-box-header">Medicaly</h3>
-                    <p>Under Construction</p>
-                  </div>
-                </div>
-                <div class="flip-box-back text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <p class="back-para">Under Construction
-                    </p><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="box-item">
-              <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <h3 class="flip-box-header">Task-it</h3>
-                    <p>A multi-platform task management tool.</p>
-                  </div>
-                </div>
-                <div class="flip-box-back text-center" style="background-color:black;">
-                  <div class="inner color-white">
-                    <div class="back-para">An user-friendly management tool to complete projects more efficiently by organizing, scheduling, and prioritising related tasks.</div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <div class="listoftools">[ Published on Sensors - May, 2018 ]</div>
+                    <button class="flip-box-button"><a href="https://www.mdpi.com/1424-8220/18/5/1486">Learn More</a></button>
                   </div>
                 </div>
               </div>
@@ -465,20 +389,34 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Repository for MRI Data</h3>
-                    <p>[Blank]</p>
+                    <h3 class="flip-box-header">Biofuel cell on carbon membranes</h3>
+                    <p>A graphitic Carbon-based biofuel cell for electricity and energy storage.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="back-para">[Description] </div><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <div class="listoftools">[ Published on Electrochemical Society (ESC) - May, 2018 ]</div>
+                    <button class="flip-box-button"><a href="http://ma.ecsdl.org/content/MA2018-01/13/1033.short">Learn More</a></button>
                   </div>
                 </div>
               </div>
             </div>
-            
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center filter-" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">Silica for cheap POC diagnostics</h3>
+                    <p>Improved detection limit of biosensors using multi-scale silica nanostructures.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <div class="listoftools">[ Published on SPIE - Mar, 2017 ]</div>
+                    <button class="flip-box-button"><a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/10055/1/Multi-scale-silica-structures-for-improved-point-of-care-detection/10.1117/12.2258655.short">Learn More</a></button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
     </section>
