changed the email

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!--right section: email-->
     <div>
       <div class="main-right">
-        <div class="email"><a href="mailto:elsie.c.madden@gmail.com?subject=subject text">elsie.c.madden@gmail.com</a></div>
+        <div class="email"><a href="mailto:eunbyuc@gmail.com?subject=subject text">eunbyuc@gmail.com</a></div>
         <div class="vl-right"></div>
       </div>
     </div>
